--- a/compiled/web/index.html
+++ b/compiled/web/index.html
@@ -63,7 +63,7 @@
 			<option value="defaultold">Default Old</option>
 			<option value="defaultnew">Default 1.17+</option>
 			<option value="bombies">Bombies 180k</option>
-			<option value="Tight">Jeo</option>
+			<option value="tight">Jeo</option>
 			<option value="bones">Bare Bones</option>
 			<option value="modifiednew">Modified 1.17+</option>
 			<option value="miamiprivate">Miami Private</option>
